--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Gui Lima</p>
+        <p>Desenvolvido por Maysa</p>
     </footer>
     <script type="module" src="graficos/common.js"></script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
@@ -29,3 +29,4 @@
     <script type="module" src="graficos/redesFavoritasMundo.js"></script>
 </body>
 </html>
+
